feat(carfleet-requests): add legacy master data combos
